@@ -44,6 +44,7 @@
     <File name="Position.cs" subtype="Code" buildaction="Compile" />
     <File name="QuickAccessToolbar.cs" subtype="Code" buildaction="Compile" />
     <File name="ApplicationButton.cs" subtype="Code" buildaction="Compile" />
+    <File name="ApplicationMenu.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
