@@ -1,3 +1,7 @@
+2008-06-23  Laurent Debacker <debackerl@gmail.com> 
+
+	* MainWindow.cs: Updated sample
+
 2007-12-29  Laurent Debacker <debackerl@gmail.com> 
 
 	
